@@ -108,41 +108,25 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.junit.platform</groupId>
-						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.0.2</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 	<modules>
 		<module>Chapter04ThreadsFutureForkJoinAndItsLimitations</module>
 		<module>Chapter05GettingStartedWithParallelStreams</module>
+		<module>Chapter06BuildRetailCheckoutApplicationusingParallelStreams</module>
+		<module>Chapter07Parallel-Streams-Under-the-hood</module>
+		<module>
+			Chapter08Parallel-Streams-Threading-Model-Common-ForkJoin-Pool
+		</module>
+		<module>Chapter11-Exploring-CompletableFuture-Functions</module>
+		<module>
+			Chapter12-Build-ProductService-Application-using-CompletableFuture
+		</module>
+		<module>
+			Chapter13-Combining-Streams-and-CompletableFuture
+		</module>
+		<module>
+			Chapter14-Exception-HandlingRecovery-in-CompletableFuture
+		</module>
 	</modules>
 </project>
